--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
+    "express-fileupload": "^0.4.0",
     "jsonwebtoken": "^8.2.1",
+    "multer": "^1.3.0",
     "promise-mysql": "^3.2.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
