--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
     "express-fileupload": "^0.4.0",
+    "file-type": "^7.7.1",
     "jsonwebtoken": "^8.2.1",
     "multer": "^1.3.0",
     "promise-mysql": "^3.2.1",
