--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "express-fileupload": "^0.4.0",
     "file-type": "^7.7.1",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "multer": "^1.3.0",
     "promise-mysql": "^3.2.1",
+    "rc-calendar": "^9.6.0",
+    "rc-time-picker": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -18,7 +21,9 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.1"
+    "semantic-ui-react": "^0.79.1",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
